# VESTA

./: .env.example  .gitignore  Cargo.toml  LICENSE  benchmarks_result.csv  build_all.sh  build_gui.sh  check_deps.sh  com.vesta.desktop.desktop  config.example.toml  modifiche_da_fare.md  run_benchmarks.py  run_gui.sh
.github/workflows/: build.yml
Test_Subs/: Detour-ja.srt  create_test_fixtures.py
Test_Subs/TV_SERIE/: Detour_Ep01.en.srt  Detour_Ep01.native.ja.srt  Detour_Ep02.en.srt  Detour_Ep02.native.ja.srt  Detour_Ep03.en.srt  Detour_Ep03.native.ja.srt
Test_Subs/fixtures/: clip_01_en.srt  clip_01_it.srt  clip_02_en.srt  clip_02_it.srt  clip_03_en.srt  clip_03_it.srt  clip_04_en.srt  clip_04_it.srt  clip_05_en.srt  clip_05_it.srt  manifest.json
apps/srt-gui/: index.html  package-lock.json  package.json  translate.py  translate_llm.py  vite.config.ts
apps/srt-gui/reports/: missing_translations_report.json
apps/srt-gui/scripts/: check_missing_translations.py
apps/srt-gui/src/: App.svelte  app.css  main.ts
apps/srt-gui/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
apps/srt-gui/src-tauri/capabilities/: default.json
apps/srt-gui/src-tauri/src/: lib.rs  main.rs  state.rs
apps/srt-gui/src-tauri/src/commands/: flashcards.rs  info.rs  mod.rs  sync.rs  (+2 more)
apps/srt-gui/src/lib/: AlignTab.svelte  FlashcardsTab.svelte  SearchableSelect.svelte  SettingsTab.svelte  ShortcutOverlay.svelte  ShortcutsTab.svelte  Sidebar.svelte  SyncTab.svelte  TranscribeTab.svelte  TranslateTab.svelte  models.ts
build-scripts/: .SRCINFO  PKGBUILD  PKGBUILD.local  build-aur.sh  com.vesta.desktop.flatpak.yml  git-release.sh  push-aur.sh  update_project_info.sh
cli/srt-extract-cli/: Cargo.toml  README.md
cli/srt-extract-cli/src/: main.rs
cli/srt-translate-cli/: Cargo.toml  README.md
cli/srt-translate-cli/src/: main.rs
core/srt-parser/: Cargo.toml  README.md
core/srt-parser/src/: lib.rs
docs/: LICENSE  README.md  release-notes.md
lib/srt-extract/: Cargo.toml
lib/srt-extract/src/: lib.rs
lib/srt-sync/: Cargo.toml
lib/srt-sync/src/: engine.rs  interpolator.rs  lib.rs
lib/srt-translate/: Cargo.toml  README.md
lib/srt-translate/src/: language_info.rs  rate_limiter.rs  translator.rs
srt-extract/: Cargo.toml
srt-extract-lib/: Cargo.toml
srt-extract-lib/src/: lib.rs
srt-extract/src/: main.rs
srt-gui/: index.html  package-lock.json  package.json  tsconfig.json
srt-gui/src/: App.svelte  app.css
srt-gui/src-tauri/: Cargo.toml  tauri.conf.json
srt-gui/src-tauri/capabilities/: default.json
srt-gui/src-tauri/src/: main.rs  state.rs
srt-gui/src-tauri/src/commands/: mod.rs  sync.rs  translate.rs
srt-gui/src/lib/: SettingsTab.svelte  ShortcutsTab.svelte  Sidebar.svelte  SyncTab.svelte  TranslateTab.svelte  models.ts
srt-gui/src/lib/i18n/: index.ts
srt-parser/: Cargo.toml
srt-parser/src/: lib.rs
srt-sync-lib/: Cargo.toml
srt-sync-lib/src/: engine.rs  sampler.rs
srt-translate/: Cargo.toml
srt-translate-lib/: Cargo.toml
srt-translate-lib/src/: language_info.rs  lib.rs  prompts.rs  translator.rs
srt-translate/src/: main.rs
subs2srs/: preferences.txt  readme.txt
subs2srs/Anki Deck Template/: subs2srs_template_context_for_anki1.anki  subs2srs_template_context_for_anki2.apkg  subs2srs_template_for_anki1.anki  subs2srs_template_for_anki2.apkg
subs2srs/Help/: subs2srs_Usage.html
(+40 files in other folders)
