[workspace]
members = [
    "srt-parser",
    "srt-extract",
    "srt-extract-lib",
    "srt-translate",
    "srt-translate-lib",
    "srt-sync-lib",
    "srt-gui/src-tauri",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
