[package]
name = "srt-translate-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "srt-translate"
path = "src/main.rs"

[dependencies]
srt-parser = { path = "../srt-parser" }
srt-translate-lib = { path = "../srt-translate-lib" }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
dotenvy = "0.15"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
num_cpus = "1.16"
regex = "1"
